# openGL-physics

./: CMakeLists.txt  README.md  main.cpp
gl_buffers/: CMakeLists.txt  EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
include/: Cuboid.hpp  PhysicsHandler.hpp  ShaderProgram.hpp  Structure.hpp  vect3d.hpp
src/: CMakeLists.txt  Cuboid.cpp  PhysicsHandler.cpp  ShaderProgram.cpp  Structure.cpp
